--- a/app/src/public/login_register.html
+++ b/app/src/public/login_register.html
@@ -8,7 +8,7 @@
 	<script src="js/main.js" type="text/javascript"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<link href = "styleEvents.css" rel="stylesheet" type="text/css"/>
+	<link href = "css/styleEvents.css" rel="stylesheet" type="text/css"/>
 
 	<title>EventIT | Login/Register</title>
 	<link rel="shortcut icon" type="image/x-icon" href="web.ico" />
@@ -16,7 +16,7 @@
 
 </head>
 
-<body background="event3.jpg">
+<body background="images/login.jpg">
 
 	<body class="container">		
 	<body align="left">
