--- a/app/src/public/about.html
+++ b/app/src/public/about.html
@@ -9,9 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> About | EventIT </title>
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <title>EventIT | About</title>
+    <link rel="shortcut icon" type="image/x-icon" href="web.ico" />
+    <link rel="icon" type="image" href="animated_favicon1.gif" />
 
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link 
+  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+  rel="stylesheet"  type='text/css'>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -21,13 +28,6 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> EventIT </a>
+                <a class="navbar-brand" href="index.html">EventIT</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,24 +59,39 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Events <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Event Categories <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="cultural_portfolio.html"> Cultural </a>
+                                <a href="portfolio-1-col.html?category=technical">Technical Events</a>
                             </li>
                             <li>
-                                <a href="technical_portfolio.html"> Technical </a>
+                                <a href="portfolio-1-col.html?category=machineLearning">Machine Learning</a>
                             </li>
                             <li>
-                                <a href="sports_portfolio.html"> Sports </a>
+                                <a href="portfolio-1-col.html?category=sports">Sports Events</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=cultural">Cultural Events</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=cloudComputing">Cloud computing</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=iot">IoT</a>
                             </li>
                             <li><hr>
-                                <a href="all_events.html">All Events</a>
+                                <a href="portfolio-item.html">All Events</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="logout.html">Logout</a>
+                        <a href="organise.html">Organise</a>
+                    </li>
+                    <li>
+                        <a href="profile.html">Profile</a>
+                    </li>
+                    <li>
+                        <a href="login_register.html">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -92,7 +107,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">About
-                    <small> Our Journey </small>
+                    <small>Our Journey</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
@@ -106,13 +121,13 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="images/about.png" alt="">
+                <img class="img-responsive" src="event.png" alt="">
             </div>
             <div class="col-md-6">
                 <h2>About EventIT</h2>
                 <p>EventIT is an idea evolved out of personal interest to place all IT/ computer sciece relatede events under one roof. We have built this webappp in Hasura platform in 2017. With the help of Mr Tejas Reddy (BTech, IITJ) and the team Hasura for its provision of its tools, it is possible for us to buld this app in a very short span of time.</p>
-                <p>We begun our journey from June 2017. This app is built using node.js, Bootstrap, CSS, HTML, Postgresql, Hasura platform, APIs like ....</p>
-                <p>On this site, you can go through the summary, get notifications and also Upload events.</p>
+                <p>We begun our journey from June 2017. This app is built using node.js, Bootstrap, CSS, HTML, Postgresql and Hasura platform</p>
+                <p>On this site, you can go through the summary, get notifications and also Upload events</p>
             </div>
         </div>
         <!-- /.row -->
@@ -129,12 +144,13 @@
                         <h3>Amulya Reddy<br>
                             <small>BE, Undergraduate</small>
                         </h3>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/amulyareddyk"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
                             <li><a href="https://www.linkedin.com"><i class="fa fa-2x fa-linkedin-square"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
+                            <li><a href="https://twitter.com/AmulyaReddy99"><i class="fa fa-2x fa-twitter-square"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -142,144 +158,47 @@
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="images/tejas.jpg" alt="Tejas Reddy">
+                    <img class="img-responsive" src="images/tejas.jpg" alt="">
                     <div class="caption">
                         <h3>Tejas Reddy<br>
                             <small>BTech, Undergraduate</small>
                         </h3>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/tejas.reddyk"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
+                            <li><a href="https://www.linkedin.com/in/tejasreddyk/"><i class="fa fa-2x fa-linkedin-square"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="images/tanmai.jpg" alt="Tanmai Gopal">
-                    <div class="caption">
-                        <h3>Tanmai Gopal<br>
-                            <small>Hasura co-founder</small>
-                        </h3>
-                        <p>Lorem Ipsum..</p>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
+                            <li><a href="https://twitter.com/TejasReddy9"><i class="fa fa-2x fa-twitter-square"></i></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="images/kartik.jpg" alt="">
-                    <div class="caption">
-                        <h3>Kartik<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
+</div></div>
+<div class="w3-container w3-black w3-center w3-allerta">
+  <p class="w3-xlarge"><br>Making the Web!<br>
+    <p>
+        Login and choose a card. go through each section for better understanding such as weather, special food in the locality, culture and architecture of the area, visiting places, and other sections provided. Voice Translator is a feature that translates from any regional language (chosen) to English. this feature helps you to cope with different people in different localities understanding the language. 
+    </p>
+    <p class="w3-xlarge">Acknowledgements
+    <p>
+        Special thanks to Hasura for its support and encouragement. Also thanks to my Dad for his support.  
+    </p>
+    <p>
+        <h6>Terms and conditions appply. No copy rights.</h6>
+    </p>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; 2017 | EventIT</p>
                 </div>
             </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="images/arvi.jpg" alt="">
-                    <div class="caption">
-                        <h3>Aravind Shankar<br>
-                            <small>Job Title</small>
-                        </h3>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="thumbnail">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <div class="caption">
-                        <h3>Shark<br>
-                            <small>Shark</small>
-                        </h3>
-                        <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /.row -->
+        </footer>
 
-        <!-- Our Customers -->
-<!--         <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Our Customers</h2>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-        </div> -->
-        <!-- /.row -->
-
-        <hr>
-
-        <div class="w3-container w3-black w3-center w3-allerta">
-            <p class="w3-xlarge"><br>Making the Web!<br>
-            <p>Login and choose a card. go through each section for better understanding such as weather, special food in the locality, culture and architecture of the area, visiting places, and other sections provided. Voice Translator is a feature that translates from any regional language (chosen) to English. this feature helps you to cope with different people in different localities understanding the language. </p>
-            <p class="w3-xlarge">Acknowledgements
-            <p>Special thanks to Hasura for its support and encouragement. Also thanks to my Dad for his support. </p>
-            <p> <h6>Terms and conditions appply. No copy rights.</h6> </p>
-
-            <!-- Footer -->
-            <footer>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p>Copyright &copy; EventIT 2017</p>
-                    </div>
-                </div>
-            </footer>
-        </div> <!-- w3-container-for-footer -->
-
-    </div>
+    </div> -->
     <!-- /.container -->
 
     <!-- jQuery -->
@@ -287,7 +206,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
+</div>
 </body>
 
 </html>
