--- a/app/src/public/portfolio-item.html
+++ b/app/src/public/portfolio-item.html
@@ -3,14 +3,26 @@
 
 <head>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> Event Name </title>
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <title>EventIt | Details</title>
+    <link rel="shortcut icon" type="image/x-icon" href="web.ico" />
+    <link rel="icon" type="image" href="animated_favicon1.gif" />
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/portfolio-1-col.js"></script>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,13 +33,6 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -44,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> EventIT </a>
+                <a class="navbar-brand" href="index.html">EventIT</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -58,25 +63,40 @@
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Events <b class="caret"></b></a>
+                    <li class="dropdown active">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Event Categories <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="cultural_portfolio.html"> Cultural </a>
+                                <a href="portfolio-1-col.html?category=technical">Technical Events</a>
                             </li>
                             <li>
-                                <a href="technical_portfolio.html"> Technical </a>
+                                <a href="portfolio-1-col.html?category=machineLearning">Machine Learning</a>
                             </li>
                             <li>
-                                <a href="sports_portfolio.html"> Sports </a>
+                                <a href="portfolio-1-col.html?category=sports">Sports Events</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=cultural">Cultural Events</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=cloudComputing">Cloud computing</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=iot">IoT</a>
                             </li>
                             <li><hr>
-                                <a href="all_events.html">All Events</a>
+                                <a href="portfolio-item.html">All Events</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="logout.html">Logout</a>
+                        <a href="organise.html">Organise</a>
+                    </li>
+                    <li>
+                        <a href="profile.html">Profile</a>
+                    </li>
+                    <li>
+                        <a href="login_register.html">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -88,72 +108,33 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header"> Event Name
-                    <small>Subheading</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active"> Event Name </li>
-                </ol>
-            </div>
-        </div>
-        <!-- /.row -->
-
+    <div id="category_hdng"></div>
         <!-- Portfolio Item Row -->
-        <div class="row">
+        <div id="DetailsTemp"></div>
 
-            <div class="col-md-8">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+        <div class="col-lg-8">
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" id="cmt">Comments</a>
+                    </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse">
+                    <div style="padding-left: 10px; padding-right: 10px; padding-top: 10px; padding-bottom: 10px;">
+                        <div class="controls">
+                            <input type="text" class="form-control" id="comment" required>
+                            <div id="allComments"></div>
                         </div>
                     </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
                 </div>
             </div>
-
-            <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
-            </div>
-
         </div>
-        <!-- /.row -->
-
-        <!-- Related Projects Row -->
+        </div>
+            <div class="col-md-4">
+            <button id="booknow" class="btn btn-primary">Book Now</button>
+            </div>
+       <!-- Related Projects Row -->
         <div class="row">
 
             <div class="col-lg-12">
@@ -188,12 +169,24 @@
         <!-- /.row -->
 
         <hr>
-
-        <!-- Footer -->
+       
+<div class="w3-container w3-black w3-center w3-allerta">
+  <p class="w3-xlarge"><br>Making the Web!<br>
+    <p>
+        Login and choose a card. go through each section for better understanding such as weather, special food in the locality, culture and architecture of the area, visiting places, and other sections provided. Voice Translator is a feature that translates from any regional language (chosen) to English. this feature helps you to cope with different people in different localities understanding the language. 
+    </p>
+    <p class="w3-xlarge">Acknowledgements
+    <p>
+        Special thanks to Hasura for its support and encouragement. Also thanks to my Dad for his support.  
+    </p>
+    <p>
+        <h6>Terms and conditions appply. No copy rights.</h6>
+    </p>
+    <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; 2017 | EventIT</p>
                 </div>
             </div>
         </footer>
@@ -207,6 +200,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+</div>
 </body>
 
 </html>
