--- a/app/src/public/profile.html
+++ b/app/src/public/profile.html
@@ -41,7 +41,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
     <script type="text/javascript" src="js/eveProfile.js"></script>
-    <script type="text/javascript" src="js/Profile.js"></script>
+    <script type="text/javascript" src="js/profile.js"></script>
     <script type="text/javascript" src="js/portfolio-1-col.js"></script>
 
     <!-- Bootstrap Core CSS -->
