--- a/app/src/public/organise.html
+++ b/app/src/public/organise.html
@@ -96,7 +96,7 @@
                         <a href="profile.html">Profile</a>
                     </li>
                     <li>
-                        <a href="login_register.html">Logout</a>
+                        <a>Logout</a>
                     </li>
                 </ul>
             </div>
@@ -176,12 +176,6 @@
                                 <option value="1">Sports events</option>
                                 <option value="2">Cultural events</option>
                             </select> -->
-                        </div>
-                    </div>
-                    <div class="control-group form-group">
-                        <div class="controls">
-                            <label>Email address to contact:</label>
-                            <input type="email" class="form-control" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" placeholder="name@name.com" id="email_id" required data-validation-required-message="Please enter your email address.">
                         </div>
                     </div>
                     <div>
