--- a/app/src/public/profile.html
+++ b/app/src/public/profile.html
@@ -131,7 +131,7 @@
                         <a href="profile.html">Profile</a>
                     </li>
                     <li>
-                        <a href="login_register.html">Logout</a>
+                        <a>Logout</a>
                     </li>
                 </ul>
             </div>
