--- a/app/src/public/404.html
+++ b/app/src/public/404.html
@@ -9,25 +9,20 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> 404 | EventIT </title>
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <title>EventIT | 404</title>
+    <link rel="shortcut icon" type="image/x-icon" href="web.ico" />
+    <link rel="icon" type="image" href="animated_favicon1.gif" />
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -44,46 +39,52 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> EventIT </a>
+                <a class="navbar-brand" href="index.html">EventIT</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="../about.html">About</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="../services.html">Services</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="../contact.html">Contact</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Events <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="cultural_portfolio.html"> Cultural </a>
+                                <a href="portfolio-1-col.html?category=technical">Technical Events</a>
                             </li>
                             <li>
-                                <a href="technical_portfolio.html"> Technical </a>
+                                <a href="portfolio-1-col.html?category=machineLearning">Machine Learning</a>
                             </li>
                             <li>
-                                <a href="sports_portfolio.html"> Sports </a>
+                                <a href="portfolio-1-col.html?category=sports">Sports Events</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=cultural">Cultural Events</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=cloudComputing">Cloud computing</a>
+                            </li>
+                            <li>
+                                <a href="portfolio-1-col.html?category=iot">IoT</a>
                             </li>
                             <li><hr>
-                                <a href="all_events.html">All Events</a>
+                                <a href="portfolio-item.html">All Events</a>
                             </li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="logout.html">Logout</a>
                     </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
-    </nav>
+    </nav><br>
 
     <!-- Page Content -->
     <div class="container">
@@ -112,36 +113,36 @@
                     <p>The page you're looking for could not be found. Here are some helpful links to get you back on track:</p>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="../index.html">Home</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="../about.html">About</a>
                         </li>
                         <li>
-                            <a href="services.html">Services</a>
+                            <a href="../services.html">Services</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="../contact.html">Contact</a>
                         </li>
                         <li>
-                            Events
+                            Event Categories
                             <ul>
                                 <li>
-                                    <a href="cultural_portfolio.html"> Cultural </a>
+                                    <a href="../portfolio-1-col.html">Technical Events</a>
                                 </li>
                                 <li>
-                                    <a href="technical_portfolio.html"> Technical </a>
+                                    <a href="../portfolio-1-col.html">Sports Events</a>
                                 </li>
                                 <li>
-                                    <a href="sports_portfolio.html"> Sports </a>
+                                    <a href="../portfolio-1-col.html">Cultural Events</a>
                                 </li>
-                                <li>
-                                    <a href="all_events.html">All Events</a>
+                                <li class="active"><hr>
+                                    <a href="../portfolio-4-col.html">All Events</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                           <a href="logout.html">Logout</a>
+                            <a href="../login_register.html">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -150,23 +151,25 @@
         </div>
 
         <hr>
+       
+<div class="w3-container w3-black w3-center w3-allerta">
+  <p class="w3-xlarge"><br>Making the Web!
 
-        <div class="w3-container w3-black w3-center w3-allerta">
-            <p class="w3-xlarge"><br>Making the Web!<br>
-            <p>Login and choose a card. go through each section for better understanding such as weather, special food in the locality, culture and architecture of the area, visiting places, and other sections provided. Voice Translator is a feature that translates from any regional language (chosen) to English. this feature helps you to cope with different people in different localities understanding the language. </p>
-            <p class="w3-xlarge">Acknowledgements
-            <p>Special thanks to Hasura for its support and encouragement. Also thanks to my Dad for his support. </p>
-            <p> <h6>Terms and conditions appply. No copy rights.</h6> </p>
-
-            <!-- Footer -->
-            <footer>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p>Copyright &copy; EventIT 2017</p>
-                    </div>
+    <p class="w3-xlarge">Acknowledgements
+    <p>
+        Special thanks to Hasura for its support and encouragement. Also thanks to my Dad for his support.  
+    </p>
+    <p>
+        <h6>Terms and conditions appply. No copy rights.</h6>
+    </p>
+    <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; 2017 | EventIT</p>
                 </div>
-            </footer>
-        </div> <!-- w3-container-for-footer -->
+            </div>
+        </footer>
 
     </div>
     <!-- /.container -->
@@ -177,6 +180,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+</div>
 </body>
 
 </html>
