--- a/app/src/public/login_register.html
+++ b/app/src/public/login_register.html
@@ -5,12 +5,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
-	<script src="main.js" type="text/javascript"></script>
-	<script src="details.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
+	<script src="js/details.js" type="text/javascript"></script>
 
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<link href = "styleEvents.css" rel="stylesheet" type="text/css"/>
+	<link href = "css/styleEvents.css" rel="stylesheet" type="text/css"/>
 
 	<title>EventIT | Login/Register</title>
 	<link rel="shortcut icon" type="image/x-icon" href="web.ico" />
@@ -18,7 +18,7 @@
 
 </head>
 
-<body background="images/login.jpg">
+<body background="event3.jpg">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
