--- a/app/src/public/about.html
+++ b/app/src/public/about.html
@@ -124,7 +124,7 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="event.png" alt="">
+                <img class="img-responsive" src="images/about.png" alt="">
             </div>
             <div class="col-md-6">
                 <h2>About EventIT</h2>
@@ -142,7 +142,7 @@
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="amulya.jpg" alt="Amulya Reddy">
+                    <img class="img-responsive" src="images/amulya.jpg" alt="Amulya Reddy">
                     <div class="caption">
                         <h3>Amulya Reddy<br>
                             <small>BE, Undergraduate</small>
@@ -161,7 +161,7 @@
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="Tejas Reddy.jpg" alt="">
+                    <img class="img-responsive" src="images/tejas.jpg" alt="">
                     <div class="caption">
                         <h3>Tejas Reddy<br>
                             <small>BTech, Undergraduate</small>
