--- a/app/src/public/login_register.html
+++ b/app/src/public/login_register.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body background="event3.jpg">
+<body background="images/login.jpg">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
