--- a/app/src/public/contact.html
+++ b/app/src/public/contact.html
@@ -217,16 +217,13 @@
         <hr>
        
 <div class="w3-container w3-black w3-center w3-allerta">
-  <p class="w3-xlarge"><br>Making the Web!<br>
+   <p class="w3-xlarge"><br>
     <p>
-        Login and choose a card. go through each section for better understanding such as weather, special food in the locality, culture and architecture of the area, visiting places, and other sections provided. Voice Translator is a feature that translates from any regional language (chosen) to English. this feature helps you to cope with different people in different localities understanding the language. 
+        
     </p>
     <p class="w3-xlarge">Acknowledgements
     <p>
-        Special thanks to Hasura for its support and encouragement. Also thanks to my Dad for his support.  
-    </p>
-    <p>
-        <h6>Terms and conditions appply. No copy rights.</h6>
+        I wish to express my sincere gratitude to Hasura team for providing me an opportunity to do my internship project workin HASURA. I sincerely thank all the mentors of slack channels and all friends in slack for the guidance and encouragement in carrying out this project work.
     </p>
     <!-- Footer -->
         <footer>
