--- a/app/src/public/404.html
+++ b/app/src/public/404.html
@@ -153,14 +153,13 @@
         <hr>
        
 <div class="w3-container w3-black w3-center w3-allerta">
-  <p class="w3-xlarge"><br>Making the Web!
-
+    <p class="w3-xlarge"><br>
+    <p>
+        
+    </p>
     <p class="w3-xlarge">Acknowledgements
     <p>
-        Special thanks to Hasura for its support and encouragement. Also thanks to my Dad for his support.  
-    </p>
-    <p>
-        <h6>Terms and conditions appply. No copy rights.</h6>
+        I wish to express my sincere gratitude to Hasura team for providing me an opportunity to do my internship project workin HASURA. I sincerely thank all the mentors of slack channels and all friends in slack for the guidance and encouragement in carrying out this project work.
     </p>
     <!-- Footer -->
         <footer>
