--- a/app/src/public/portfolio-1-col.html
+++ b/app/src/public/portfolio-1-col.html
@@ -24,6 +24,7 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/eventlist.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
