--- a/app/src/public/services.html
+++ b/app/src/public/services.html
@@ -9,6 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+
+    <script type="text/javascript" src="js/main.js"></script>
+
     <title>EventIT | Services</title>
     <link rel="shortcut icon" type="image/x-icon" href="web.ico" />
     <link rel="icon" type="image" href="animated_favicon1.gif" />
