--- a/app/src/public/contact.html
+++ b/app/src/public/contact.html
@@ -21,6 +21,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
     <script type="text/javascript" src="js/contact.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
