--- a/app/src/public/organise.html
+++ b/app/src/public/organise.html
@@ -13,12 +13,14 @@
     <link rel="shortcut icon" type="image/x-icon" href="web.ico" />
     <link rel="icon" type="image" href="animated_favicon1.gif" />
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <script src= "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/organise.js"></script>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -95,7 +97,7 @@
                     <li>
                         <a href="profile.html">Profile</a>
                     </li>
-                    <li>
+                    <li id="logout_btn">
                         <a>Logout</a>
                     </li>
                 </ul>
