--- a/app/src/public/portfolio-item.html
+++ b/app/src/public/portfolio-item.html
@@ -24,6 +24,7 @@
 <script language="JavaScript" type="text/javascript" src="/js/sprinkle.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/portfolio-1-col.js"></script>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
