--- a/app/src/public/profile.html
+++ b/app/src/public/profile.html
@@ -34,15 +34,16 @@
     <link rel="shortcut icon" type="image/x-icon" href="web.ico" />
     <link rel="icon" type="image" href="animated_favicon1.gif" />
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/eveProfile.js"></script>
     <script type="text/javascript" src="js/profile.js"></script>
     <script type="text/javascript" src="js/portfolio-1-col.js"></script>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -130,7 +131,7 @@
                     <li class="active">
                         <a href="profile.html">Profile</a>
                     </li>
-                    <li>
+                    <li id="logout_btn">
                         <a>Logout</a>
                     </li>
                 </ul>
@@ -170,8 +171,8 @@
                   <label><b>Contact</b></label><br>
                   <input id="newContact" type="text" required><br><br>
 
-                  <label><b>Update your avatar</b></label><br>
-                  <div><input type="file" accept="image/*"></div><br>
+                  <!-- <label><b>Update your avatar</b></label><br>
+                  <div><input type="file" accept="image/*"></div><br> -->
                     
                   <button type="submit" method="POST" id="done" onclick="document.getElementById('updateMe').style.display='block'">Done!</button><br><br>
                 </div>
