--- a/app/src/public/profile.html
+++ b/app/src/public/profile.html
@@ -40,6 +40,7 @@
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/eveProfile.js"></script>
+    <script type="text/javascript" src="js/details.js"></script>
     <script type="text/javascript" src="js/profile.js"></script>
     <script type="text/javascript" src="js/portfolio-1-col.js"></script>
 
