--- a/app/src/public/login_register.html
+++ b/app/src/public/login_register.html
@@ -128,16 +128,16 @@
 			      <input id="lname" type="text" placeholder="Enter Last Name" name="uname" required>
 
 			      <label><b>DOB</b></label>
-			      <input id="dob" type="text" placeholder="Enter DOB" name="dob">
+			      <input id="dob" type="date" placeholder="Enter DOB" name="dob">
 
 			      <label><b>Email</b></label>
-			      <input id="email" type="text" placeholder="Enter Email address" name="uname" required>
+			      <input id="email" type="email" placeholder="Enter Email address" name="uname" required>
 
 			      <label><b>Contact number</b></label>
 			      <input id="contact" type="text" placeholder="Enter Contact number" name="uname" required>
 			       
 			      <label><b>Re-enter username</b></label>
-			      <input id="reuname" type="text" placeholder="Re-enter Username" name="uname" required>
+			      <input id="reuname" type="text" placeholder="Re-enter Username" name="reuname" required>
 			        
 			      <button type="submit" method="POST" id="id03">DONE</button>
 
