--- a/app/src/public/webhook.html
+++ b/app/src/public/webhook.html
@@ -9,9 +9,7 @@
 
 </head>
 	</head>
-	<body>
-		Verify token <br>
-		<input type="text" id="token"><br>
-		<button id="Done">Done</button>
+	<body align="center">
+		<h1>DONE!!</h1>
 	</body>
 </html>
